# jsonl-viewer

./: .gitattributes  .gitignore  Agents.md  CMakeLists.txt  README.md  TODO.md
.github/workflows/: ci.yml  pages.yml
cmake/: emscripten_toolchain.cmake
examples/: README.md  claude-session.jsonl  products.jsonl
src/: parser.hpp  schema.hpp  wasm_bindings.cpp
tests/: parser_test.cpp  renderer_test.js  schema_test.cpp  wasm_test.js
web/: index.html  parser.js  parser.wasm  renderer.js
